[gd_scene load_steps=16 format=3 uid="uid://rgbxsswrvk7e"]

[ext_resource type="Script" uid="uid://lvje2k4561nr" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://btm1g05sl2xa" path="res://sprites/player.png" id="2_i3pqv"]
[ext_resource type="Texture2D" uid="uid://d3sk7o1j7tnv4" path="res://sprites/player_run1-Sheet.png" id="4_1jxqw"]
[ext_resource type="Texture2D" uid="uid://7jw5pldsixyp" path="res://sprites/player_idle1-Sheet.png" id="5_dw050"]
[ext_resource type="Texture2D" uid="uid://cbjfhrxoqemnv" path="res://sprites/player_jump1-Sheet.png" id="6_b26j0"]
[ext_resource type="Texture2D" uid="uid://fh47hs7l1sd1" path="res://sprites/player_whip_side-Sheet.png" id="7_n7ghd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ptq8"]
size = Vector2(6, 21.333332)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hqtel"]
size = Vector2(10.666667, 63.5)

[sub_resource type="Animation" id="Animation_ivps1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animated_sprites/run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animated_sprites/idle:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("animated_sprites/jump:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("animated_sprites/side_attack:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("all_whips/whip_right:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("all_whips/whip_right:monitorable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("animated_sprites/side_attack:flip_h")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("all_whips/whip_left:monitorable")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("all_whips/whip_left:monitoring")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("all_whips/whip_right/CollisionShape2D:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("all_whips/whip_right:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_urp6f"]
resource_name = "idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animated_sprites/idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_bwjto"]
resource_name = "jump"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animated_sprites/jump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.010000002, 0.020000003, 0.04, 0.09, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_2hs0m"]
resource_name = "left_attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animated_sprites/side_attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("animated_sprites/side_attack:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("all_whips/whip_left:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("all_whips/whip_left:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_nvl01"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animated_sprites/run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0019230843, 0.07692307, 0.15192306, 0.22692305, 0.30769232, 0.38269225, 0.4576923, 0.5326923),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_606se"]
resource_name = "side_attack"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animated_sprites/side_attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("all_whips/whip_right:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("all_whips/whip_right:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("all_whips/whip_right/CollisionShape2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("all_whips/whip_right:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.25, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u1c27"]
_data = {
&"RESET": SubResource("Animation_ivps1"),
&"idle": SubResource("Animation_urp6f"),
&"jump": SubResource("Animation_bwjto"),
&"left_attack": SubResource("Animation_2hs0m"),
&"run": SubResource("Animation_nvl01"),
&"side_attack": SubResource("Animation_606se")
}

[node name="player" type="CharacterBody2D"]
light_mask = 3
visibility_layer = 3
collision_mask = 6
script = ExtResource("1_onrkg")
metadata/_edit_group_ = true

[node name="player_sprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_i3pqv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(-0.33333337, 0)
shape = SubResource("RectangleShape2D_4ptq8")

[node name="ground_cast_1" type="RayCast2D" parent="."]
position = Vector2(2, -5.3333335)
target_position = Vector2(0, 17)

[node name="ground_cast_2" type="RayCast2D" parent="."]
position = Vector2(-3.333333, 1.3333334)
target_position = Vector2(0, 10.666667)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="all_whips" type="Node2D" parent="."]

[node name="whip_right" type="Area2D" parent="all_whips"]
visible = false
rotation = 1.5707964
scale = Vector2(0.5, 0.5)
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="all_whips/whip_right"]
position = Vector2(-1.333336, -30.916668)
shape = SubResource("RectangleShape2D_hqtel")

[node name="whip_left" type="Area2D" parent="all_whips"]
visible = false
rotation = -1.5707964
scale = Vector2(0.5, 0.5)
collision_layer = 32
collision_mask = 16
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="all_whips/whip_left"]
visible = false
position = Vector2(-2.861023e-06, -30.666664)
shape = SubResource("RectangleShape2D_hqtel")

[node name="whip_down" type="Area2D" parent="all_whips"]
visible = false
rotation = -3.1415925
scale = Vector2(0.5, 0.5)
collision_layer = 32
collision_mask = 16
monitoring = false
monitorable = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="all_whips/whip_down"]
visible = false
position = Vector2(-2.861023e-06, -30.666664)
shape = SubResource("RectangleShape2D_hqtel")

[node name="whip_up" type="Area2D" parent="all_whips"]
visible = false
scale = Vector2(0.5, 0.5)
collision_layer = 32
collision_mask = 16
monitoring = false
monitorable = false
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="all_whips/whip_up"]
visible = false
position = Vector2(-2.861023e-06, -30.666664)
shape = SubResource("RectangleShape2D_hqtel")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u1c27")
}

[node name="animated_sprites" type="Node2D" parent="."]

[node name="run" type="Sprite2D" parent="animated_sprites"]
visible = false
texture_filter = 1
texture = ExtResource("4_1jxqw")
hframes = 10

[node name="idle" type="Sprite2D" parent="animated_sprites"]
visible = false
texture_filter = 1
texture = ExtResource("5_dw050")
hframes = 4

[node name="jump" type="Sprite2D" parent="animated_sprites"]
visible = false
texture_filter = 1
texture = ExtResource("6_b26j0")
hframes = 6

[node name="side_attack" type="Sprite2D" parent="animated_sprites"]
texture_filter = 1
texture = ExtResource("7_n7ghd")
flip_h = true
hframes = 7

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="all_whips/whip_right" to="." method="_on_whip_right_area_entered"]
[connection signal="area_entered" from="all_whips/whip_left" to="." method="_on_whip_left_area_entered"]
[connection signal="area_exited" from="all_whips/whip_down" to="." method="_on_whip_down_area_exited"]
[connection signal="area_entered" from="all_whips/whip_up" to="." method="_on_whip_up_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
